--- a/Css/components.css
+++ b/Css/components.css
@@ -1,50 +1,101 @@
+body{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 #header{
-    height: 70px; 
+    height: 50px; 
     background-color: white; 
-    position: relative; 
-    margin: -8px; 
+    position: fixed; 
+    top: 0px;
+    left: 0px;
+   justify-content:space-between;
     margin-bottom:-15px; 
     border-bottom: thin solid blue;
+    width: 100%;
+    z-index: 10;
+    display: flex;
+}
+#logo{
+    margin: 5px 0px 0px 5px;
+    position: relative
 }
 #user{
-    position: absolute; 
-    right: 0px; 
-    top: 20px; 
-    display: inline-block;
+    position: relative;
+    display: flex;
+    right: 0px;
+    align-items: center;
 }
 #info{
-    padding-left: 40px; 
-    margin-right: 25px;
+    width: 120px;
 }
-#user .icon{
+
+#options{
+    display: none;
     position: absolute;
-    padding-right: 0px;
+    background-color: white;
+    border-style: inset;
+    z-index: 5;
+    padding: 10px;
+    border-radius: 0px 0px 10px 10px;
+}
+
+#name{
+    cursor: pointer;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 0px;
+}
+.userIcon{
+    position: relative;
     background-color: dodgerblue;
-    clip-path: circle(30px at center);
-    padding: 30px;
-    top: -25px;
-    right: 110px;
-    font-size: 25px;
+    clip-path: circle(20px at center);
+    padding: 15px;
+    font-size: 18px;
     color: white;
 }
 #topBar{
     position: relative;
-
+    margin-top: 50px;
+   
+}
+#mobileBar{
+    position: relative;
+    margin-top: 52px;
+    background-color: white;
+    height: 35px;
+    margin-left: -8px;
+    margin-right: -8px;
+    display:none;
+}
+#currentTab{
+    position: absolute;
+    left: 15px;
+    top: 5px;
+    font-size: 20px;
+}
+#sites{
+    position: absolute;
+    right: 15px;
+    top: 5px;
+    font-size: 22px;
 }
 #topBar ul{
     display: flex;
     list-style-type: none;
     padding: 10px;
+    left: 0px;
     margin-left: -10px;
     margin-right: -10px;
     background-color: dodgerblue;
-    color: white;
+    color: black;
     margin-bottom: 0px;
+    flex-wrap: wrap;
 }
 #topBar li{
     padding: 5px 10px 5px 10px;
     margin-right: 10px;
-    border-style: ridge;
+    margin-bottom: 10px;
+    background-color: white;
     cursor: pointer;
 }
 #sideBar ul{
@@ -53,7 +104,7 @@
     padding-left: none;
     margin-left: -10px;
     margin-top: 5px;
-    width: 180px;
+    width: auto;
     color: white;
     height: auto;
     font-size: 100%;
@@ -61,13 +112,20 @@
 #sideBar li{
     position: relative;
     background-color: dodgerblue;
-    padding: 10px 25px 10px 20px;
+    padding: 10px 25px 12px 20px;
     border: thin solid white;
     width: 100% auto;
     cursor: pointer;
     margin-right: 0px;
 }
-.icon{
+#sideBar li:last-child{
+    position: fixed;
+    bottom: 0px;
+}
+#announcement{
+    display: none;
+}
+#user .icon{
     padding-right: 10px;
 }
 li:hover, #sideBar li:hover{
@@ -75,4 +133,48 @@ li:hover, #sideBar li:hover{
     background-color: white;
     color: black;
 
+}
+a:link{
+    color: black;
+    text-decoration: none;
+}
+a:visited{
+    color: black;
+    text-decoration: none;
+}
+@media only screen and (max-device-width: 480px) {
+	#topBar{
+		display: none;
+        position: absolute;
+        z-index: 100;
+        left: 0px;
+        margin-left: 0px;
+        margin-right: -10px;
+        margin-top: 35px;
+        margin-bottom: 0px;
+        width: 100%;
+        background-color: white;
+	}
+    #topBar ul{
+        position:absolute;
+        display: list-item;
+        margin-left: 10px;
+    }
+    #topBar li{
+        margin-right: 0px;
+        padding: 5px 15px 5px 15px;
+    }
+    #sideBar{
+        display: none;
+        position: absolute;
+        z-index: 10;
+        margin-left: -10px;
+        margin-right: -10px;
+    }
+    #more{
+        display: none;
+    }
+    #mobileBar{
+        display: block;
+    }
 }
