--- a/Css/log.css
+++ b/Css/log.css
@@ -1,25 +1,25 @@
-html{-webkit-text-size-adjust: 100%;}
+html{
+	-webkit-text-size-adjust: 100%;
+	height: 100%;
+}
 body{ 
 	position: relative;
-	background-image: url("../Images/bg2.jpg");
-	background-repeat: no-repeat;
-	background-position: cover;
-	background-size: 115%;
 	max-width: 100%;
 	box-sizing: border-box;
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
+	height: 100%;
 }
 #page{
+	position: relative;
 	max-width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 10%;
-	margin-bottom: 10%;
 	min-width: 50%;
+	background-image: url("../Images/bg2.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	height: 100%;
 }
-#form{
+form{
 	color: rgb(245,173,37);
 	width: 300px;
 	max-width: 70%;
@@ -29,10 +29,13 @@ body{
 	padding: 30px;
 	text-align: center;
 	box-shadow: 8px 8px 8px #000000;
-	position: relative;
-	margin-left: auto;
-	margin-right: auto;
+	position: fixed;
 	box-sizing: border-box;
+	top: 50%;
+	margin-top: -200px;
+	left: 50%;
+	margin-left: -130px;
+	right: 0;
 }
 .sub{
 	color: rgb(245,173,37);
@@ -74,4 +77,21 @@ body{
 	color: balck;
 	width: 200px auto;
 	padding-left: 40px;
+}
+
+@media only screen and (max-device-width: 480px) {
+	#status span{
+		margin-right: 15px;
+	}
+}
+@media only screen and (max-device-width: 320px) {
+	#status span{
+		display: block;
+	}
+}
+@media only screen and (max-device-width: 280px) {
+	form{
+		width: 400px;
+		max-width: 90%;
+	}
 }
